// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`io-modal — render snapshots > renders default state 1`] = `
<io-modal size="md" background="canvas" prevent-top-layer class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="modal__backdrop">
      <dialog class="modal--md modal--bg-canvas" aria-labelledby="io-modal-heading-4fzzzxjylrx" aria-modal="true">
        <div class="modal__header">
          <slot name="header">
            <h2 id="io-modal-heading-4fzzzxjylrx" class="modal__heading">
              Confirm action
            </h2>
          </slot>
          <button type="button" class="modal__close" aria-label="Close dialog">
            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
              <path d="M18 6 6 18"></path>
              <path d="m6 6 12 12"></path>
            </svg>
          </button>
        </div>
        <div class="modal__body">
          <slot></slot>
        </div>
        <div class="modal__footer modal__footer--hidden">
          <slot name="footer"></slot>
        </div>
      </dialog>
    </div>
  </mock:shadow-root>
  Body copy
</io-modal>
`;

exports[`io-modal — render snapshots > renders each size 1`] = `
MockHTMLElement {
  "__attributeMap": MockAttributeMap {
    "__items": [
      MockAttr {
        "_name": "__self",
        "_namespaceURI": null,
        "_value": "[object global]",
      },
      MockAttr {
        "_name": "__source",
        "_namespaceURI": null,
        "_value": "[object Object]",
      },
    ],
    "caseInsensitive": true,
  },
  "__namespaceURI": "http://www.w3.org/1999/xhtml",
  "__shadowRoot": null,
  "__style": undefined,
  "_childNodes": [
    <io-modal size="sm" background="canvas" prevent-top-layer class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="modal__backdrop">
      <dialog class="modal--sm modal--bg-canvas" aria-labelledby="io-modal-heading-4fzzzxjylrx" aria-modal="true">
        <div class="modal__header">
          <slot name="header">
            <h2 id="io-modal-heading-4fzzzxjylrx" class="modal__heading">
              Small
            </h2>
          </slot>
          <button type="button" class="modal__close" aria-label="Close dialog">
            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
              <path d="M18 6 6 18"></path>
              <path d="m6 6 12 12"></path>
            </svg>
          </button>
        </div>
        <div class="modal__body">
          <slot></slot>
        </div>
        <div class="modal__footer modal__footer--hidden">
          <slot name="footer"></slot>
        </div>
      </dialog>
    </div>
  </mock:shadow-root>
  Small body
</io-modal>,
    <io-modal size="md" background="canvas" prevent-top-layer class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="modal__backdrop">
      <dialog class="modal--md modal--bg-canvas" aria-labelledby="io-modal-heading-4fzzzxjylrx" aria-modal="true">
        <div class="modal__header">
          <slot name="header">
            <h2 id="io-modal-heading-4fzzzxjylrx" class="modal__heading">
              Medium
            </h2>
          </slot>
          <button type="button" class="modal__close" aria-label="Close dialog">
            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
              <path d="M18 6 6 18"></path>
              <path d="m6 6 12 12"></path>
            </svg>
          </button>
        </div>
        <div class="modal__body">
          <slot></slot>
        </div>
        <div class="modal__footer modal__footer--hidden">
          <slot name="footer"></slot>
        </div>
      </dialog>
    </div>
  </mock:shadow-root>
  Medium body
</io-modal>,
    <io-modal size="lg" background="canvas" prevent-top-layer class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="modal__backdrop">
      <dialog class="modal--lg modal--bg-canvas" aria-labelledby="io-modal-heading-4fzzzxjylrx" aria-modal="true">
        <div class="modal__header">
          <slot name="header">
            <h2 id="io-modal-heading-4fzzzxjylrx" class="modal__heading">
              Large
            </h2>
          </slot>
          <button type="button" class="modal__close" aria-label="Close dialog">
            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
              <path d="M18 6 6 18"></path>
              <path d="m6 6 12 12"></path>
            </svg>
          </button>
        </div>
        <div class="modal__body">
          <slot></slot>
        </div>
        <div class="modal__footer modal__footer--hidden">
          <slot name="footer"></slot>
        </div>
      </dialog>
    </div>
  </mock:shadow-root>
  Large body
</io-modal>,
  ],
  "_nodeValue": null,
  "nodeName": "DIV",
  "nodeType": 1,
  "ownerDocument": _MockDocument {
    "__attributeMap": MockAttributeMap {
      "__items": [],
      "caseInsensitive": true,
    },
    "__listeners": [
      MockEventListener {
        "handler": [Function],
        "type": "keydown",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerdown",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerover",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerout",
      },
      MockEventListener {
        "handler": [Function],
        "type": "focusin",
      },
      MockEventListener {
        "handler": [Function],
        "type": "focusout",
      },
      MockEventListener {
        "handler": [Function],
        "type": "keydown",
      },
      MockEventListener {
        "handler": null,
        "type": "e",
      },
    ],
    "__namespaceURI": "http://www.w3.org/1999/xhtml",
    "__shadowRoot": null,
    "__style": undefined,
    "_childNodes": [
      MockDocumentTypeNode {
        "__attributeMap": MockAttributeMap {
          "__items": [
            MockAttr {
              "_name": "html",
              "_namespaceURI": null,
              "_value": "",
            },
          ],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [],
        "_nodeValue": null,
        "nodeName": "!DOCTYPE",
        "nodeType": 10,
        "ownerDocument": [Circular],
        "parentNode": [Circular],
      },
      MockHTMLElement {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockStyleElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "data-styles",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  _MockTextNode {
                    "_childNodes": [],
                    "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                    "nodeName": "#text",
                    "nodeType": 3,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                  },
                ],
                "_nodeValue": null,
                "nodeName": "STYLE",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
                "sheet": MockCSSStyleSheet {
                  "cssRules": [
                    MockCSSRule {
                      "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "parentStyleSheet": [Circular],
                      "type": 0,
                    },
                  ],
                  "ownerNode": [Circular],
                  "parentStyleSheet": null,
                  "type": "text/css",
                },
              },
            ],
            "_nodeValue": null,
            "nodeName": "HEAD",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": MockCSSStyleDeclaration {
              "_styles": Map {},
            },
            "_childNodes": [
              _MockTextNode {
                "_childNodes": [],
                "_nodeValue": "http://localhost:3000/",
                "nodeName": "#text",
                "nodeType": 3,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "class",
                      "_namespaceURI": null,
                      "_value": "stencil-component-stage",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  [Circular],
                ],
                "_nodeValue": null,
                "nodeName": "DIV",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
            ],
            "_nodeValue": null,
            "nodeName": "BODY",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
        ],
        "_nodeValue": null,
        "nodeName": "HTML",
        "nodeType": 1,
        "ownerDocument": [Circular],
        "parentNode": [Circular],
      },
    ],
    "_nodeValue": null,
    "cookie": "",
    "defaultView": [Object],
    "nodeName": "#document",
    "nodeType": 9,
    "ownerDocument": null,
    "parentNode": null,
    "referrer": "",
  },
  "parentNode": MockHTMLElement {
    "__attributeMap": MockAttributeMap {
      "__items": [
        MockAttr {
          "_name": "class",
          "_namespaceURI": null,
          "_value": "stencil-component-stage",
        },
      ],
      "caseInsensitive": true,
    },
    "__namespaceURI": "http://www.w3.org/1999/xhtml",
    "__shadowRoot": null,
    "__style": undefined,
    "_childNodes": [
      [Circular],
    ],
    "_nodeValue": null,
    "nodeName": "DIV",
    "nodeType": 1,
    "ownerDocument": _MockDocument {
      "__attributeMap": MockAttributeMap {
        "__items": [],
        "caseInsensitive": true,
      },
      "__listeners": [
        MockEventListener {
          "handler": [Function],
          "type": "keydown",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerdown",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerover",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerout",
        },
        MockEventListener {
          "handler": [Function],
          "type": "focusin",
        },
        MockEventListener {
          "handler": [Function],
          "type": "focusout",
        },
        MockEventListener {
          "handler": [Function],
          "type": "keydown",
        },
        MockEventListener {
          "handler": null,
          "type": "e",
        },
      ],
      "__namespaceURI": "http://www.w3.org/1999/xhtml",
      "__shadowRoot": null,
      "__style": undefined,
      "_childNodes": [
        MockDocumentTypeNode {
          "__attributeMap": MockAttributeMap {
            "__items": [
              MockAttr {
                "_name": "html",
                "_namespaceURI": null,
                "_value": "",
              },
            ],
            "caseInsensitive": true,
          },
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [],
          "_nodeValue": null,
          "nodeName": "!DOCTYPE",
          "nodeType": 10,
          "ownerDocument": [Circular],
          "parentNode": [Circular],
        },
        MockHTMLElement {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockHTMLElement {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                MockStyleElement {
                  "__attributeMap": MockAttributeMap {
                    "__items": [
                      MockAttr {
                        "_name": "data-styles",
                        "_namespaceURI": null,
                        "_value": "",
                      },
                    ],
                    "caseInsensitive": true,
                  },
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [
                    _MockTextNode {
                      "_childNodes": [],
                      "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "nodeName": "#text",
                      "nodeType": 3,
                      "ownerDocument": [Circular],
                      "parentNode": [Circular],
                    },
                  ],
                  "_nodeValue": null,
                  "nodeName": "STYLE",
                  "nodeType": 1,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                  "sheet": MockCSSStyleSheet {
                    "cssRules": [
                      MockCSSRule {
                        "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                        "parentStyleSheet": [Circular],
                        "type": 0,
                      },
                    ],
                    "ownerNode": [Circular],
                    "parentStyleSheet": null,
                    "type": "text/css",
                  },
                },
              ],
              "_nodeValue": null,
              "nodeName": "HEAD",
              "nodeType": 1,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            MockHTMLElement {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": MockCSSStyleDeclaration {
                "_styles": Map {},
              },
              "_childNodes": [
                _MockTextNode {
                  "_childNodes": [],
                  "_nodeValue": "http://localhost:3000/",
                  "nodeName": "#text",
                  "nodeType": 3,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                },
                [Circular],
              ],
              "_nodeValue": null,
              "nodeName": "BODY",
              "nodeType": 1,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
          ],
          "_nodeValue": null,
          "nodeName": "HTML",
          "nodeType": 1,
          "ownerDocument": [Circular],
          "parentNode": [Circular],
        },
      ],
      "_nodeValue": null,
      "cookie": "",
      "defaultView": [Object],
      "nodeName": "#document",
      "nodeType": 9,
      "ownerDocument": null,
      "parentNode": null,
      "referrer": "",
    },
    "parentNode": MockHTMLElement {
      "__attributeMap": MockAttributeMap {
        "__items": [],
        "caseInsensitive": true,
      },
      "__namespaceURI": "http://www.w3.org/1999/xhtml",
      "__shadowRoot": null,
      "__style": MockCSSStyleDeclaration {
        "_styles": Map {},
      },
      "_childNodes": [
        _MockTextNode {
          "_childNodes": [],
          "_nodeValue": "http://localhost:3000/",
          "nodeName": "#text",
          "nodeType": 3,
          "ownerDocument": _MockDocument {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__listeners": [
              MockEventListener {
                "handler": [Function],
                "type": "keydown",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerdown",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerover",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerout",
              },
              MockEventListener {
                "handler": [Function],
                "type": "focusin",
              },
              MockEventListener {
                "handler": [Function],
                "type": "focusout",
              },
              MockEventListener {
                "handler": [Function],
                "type": "keydown",
              },
              MockEventListener {
                "handler": null,
                "type": "e",
              },
            ],
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockDocumentTypeNode {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "html",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [],
                "_nodeValue": null,
                "nodeName": "!DOCTYPE",
                "nodeType": 10,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  MockHTMLElement {
                    "__attributeMap": MockAttributeMap {
                      "__items": [],
                      "caseInsensitive": true,
                    },
                    "__namespaceURI": "http://www.w3.org/1999/xhtml",
                    "__shadowRoot": null,
                    "__style": undefined,
                    "_childNodes": [
                      MockStyleElement {
                        "__attributeMap": MockAttributeMap {
                          "__items": [
                            MockAttr {
                              "_name": "data-styles",
                              "_namespaceURI": null,
                              "_value": "",
                            },
                          ],
                          "caseInsensitive": true,
                        },
                        "__namespaceURI": "http://www.w3.org/1999/xhtml",
                        "__shadowRoot": null,
                        "__style": undefined,
                        "_childNodes": [
                          _MockTextNode {
                            "_childNodes": [],
                            "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                            "nodeName": "#text",
                            "nodeType": 3,
                            "ownerDocument": [Circular],
                            "parentNode": [Circular],
                          },
                        ],
                        "_nodeValue": null,
                        "nodeName": "STYLE",
                        "nodeType": 1,
                        "ownerDocument": [Circular],
                        "parentNode": [Circular],
                        "sheet": MockCSSStyleSheet {
                          "cssRules": [
                            MockCSSRule {
                              "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                              "parentStyleSheet": [Circular],
                              "type": 0,
                            },
                          ],
                          "ownerNode": [Circular],
                          "parentStyleSheet": null,
                          "type": "text/css",
                        },
                      },
                    ],
                    "_nodeValue": null,
                    "nodeName": "HEAD",
                    "nodeType": 1,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                  },
                  [Circular],
                ],
                "_nodeValue": null,
                "nodeName": "HTML",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
            ],
            "_nodeValue": null,
            "cookie": "",
            "defaultView": [Object],
            "nodeName": "#document",
            "nodeType": 9,
            "ownerDocument": null,
            "parentNode": null,
            "referrer": "",
          },
          "parentNode": [Circular],
        },
        [Circular],
      ],
      "_nodeValue": null,
      "nodeName": "BODY",
      "nodeType": 1,
      "ownerDocument": _MockDocument {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__listeners": [
          MockEventListener {
            "handler": [Function],
            "type": "keydown",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerdown",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerover",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerout",
          },
          MockEventListener {
            "handler": [Function],
            "type": "focusin",
          },
          MockEventListener {
            "handler": [Function],
            "type": "focusout",
          },
          MockEventListener {
            "handler": [Function],
            "type": "keydown",
          },
          MockEventListener {
            "handler": null,
            "type": "e",
          },
        ],
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockDocumentTypeNode {
            "__attributeMap": MockAttributeMap {
              "__items": [
                MockAttr {
                  "_name": "html",
                  "_namespaceURI": null,
                  "_value": "",
                },
              ],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [],
            "_nodeValue": null,
            "nodeName": "!DOCTYPE",
            "nodeType": 10,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  MockStyleElement {
                    "__attributeMap": MockAttributeMap {
                      "__items": [
                        MockAttr {
                          "_name": "data-styles",
                          "_namespaceURI": null,
                          "_value": "",
                        },
                      ],
                      "caseInsensitive": true,
                    },
                    "__namespaceURI": "http://www.w3.org/1999/xhtml",
                    "__shadowRoot": null,
                    "__style": undefined,
                    "_childNodes": [
                      _MockTextNode {
                        "_childNodes": [],
                        "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                        "nodeName": "#text",
                        "nodeType": 3,
                        "ownerDocument": [Circular],
                        "parentNode": [Circular],
                      },
                    ],
                    "_nodeValue": null,
                    "nodeName": "STYLE",
                    "nodeType": 1,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                    "sheet": MockCSSStyleSheet {
                      "cssRules": [
                        MockCSSRule {
                          "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                          "parentStyleSheet": [Circular],
                          "type": 0,
                        },
                      ],
                      "ownerNode": [Circular],
                      "parentStyleSheet": null,
                      "type": "text/css",
                    },
                  },
                ],
                "_nodeValue": null,
                "nodeName": "HEAD",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              [Circular],
            ],
            "_nodeValue": null,
            "nodeName": "HTML",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
        ],
        "_nodeValue": null,
        "cookie": "",
        "defaultView": [Object],
        "nodeName": "#document",
        "nodeType": 9,
        "ownerDocument": null,
        "parentNode": null,
        "referrer": "",
      },
      "parentNode": MockHTMLElement {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockStyleElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "data-styles",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  _MockTextNode {
                    "_childNodes": [],
                    "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                    "nodeName": "#text",
                    "nodeType": 3,
                    "ownerDocument": _MockDocument {
                      "__attributeMap": MockAttributeMap {
                        "__items": [],
                        "caseInsensitive": true,
                      },
                      "__listeners": [
                        MockEventListener {
                          "handler": [Function],
                          "type": "keydown",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerdown",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerover",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerout",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "focusin",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "focusout",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "keydown",
                        },
                        MockEventListener {
                          "handler": null,
                          "type": "e",
                        },
                      ],
                      "__namespaceURI": "http://www.w3.org/1999/xhtml",
                      "__shadowRoot": null,
                      "__style": undefined,
                      "_childNodes": [
                        MockDocumentTypeNode {
                          "__attributeMap": MockAttributeMap {
                            "__items": [
                              MockAttr {
                                "_name": "html",
                                "_namespaceURI": null,
                                "_value": "",
                              },
                            ],
                            "caseInsensitive": true,
                          },
                          "__namespaceURI": "http://www.w3.org/1999/xhtml",
                          "__shadowRoot": null,
                          "__style": undefined,
                          "_childNodes": [],
                          "_nodeValue": null,
                          "nodeName": "!DOCTYPE",
                          "nodeType": 10,
                          "ownerDocument": [Circular],
                          "parentNode": [Circular],
                        },
                        [Circular],
                      ],
                      "_nodeValue": null,
                      "cookie": "",
                      "defaultView": [Object],
                      "nodeName": "#document",
                      "nodeType": 9,
                      "ownerDocument": null,
                      "parentNode": null,
                      "referrer": "",
                    },
                    "parentNode": [Circular],
                  },
                ],
                "_nodeValue": null,
                "nodeName": "STYLE",
                "nodeType": 1,
                "ownerDocument": _MockDocument {
                  "__attributeMap": MockAttributeMap {
                    "__items": [],
                    "caseInsensitive": true,
                  },
                  "__listeners": [
                    MockEventListener {
                      "handler": [Function],
                      "type": "keydown",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerdown",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerover",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerout",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "focusin",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "focusout",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "keydown",
                    },
                    MockEventListener {
                      "handler": null,
                      "type": "e",
                    },
                  ],
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [
                    MockDocumentTypeNode {
                      "__attributeMap": MockAttributeMap {
                        "__items": [
                          MockAttr {
                            "_name": "html",
                            "_namespaceURI": null,
                            "_value": "",
                          },
                        ],
                        "caseInsensitive": true,
                      },
                      "__namespaceURI": "http://www.w3.org/1999/xhtml",
                      "__shadowRoot": null,
                      "__style": undefined,
                      "_childNodes": [],
                      "_nodeValue": null,
                      "nodeName": "!DOCTYPE",
                      "nodeType": 10,
                      "ownerDocument": [Circular],
                      "parentNode": [Circular],
                    },
                    [Circular],
                  ],
                  "_nodeValue": null,
                  "cookie": "",
                  "defaultView": [Object],
                  "nodeName": "#document",
                  "nodeType": 9,
                  "ownerDocument": null,
                  "parentNode": null,
                  "referrer": "",
                },
                "parentNode": [Circular],
                "sheet": MockCSSStyleSheet {
                  "cssRules": [
                    MockCSSRule {
                      "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-text,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "parentStyleSheet": [Circular],
                      "type": 0,
                    },
                  ],
                  "ownerNode": [Circular],
                  "parentStyleSheet": null,
                  "type": "text/css",
                },
              },
            ],
            "_nodeValue": null,
            "nodeName": "HEAD",
            "nodeType": 1,
            "ownerDocument": _MockDocument {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__listeners": [
                MockEventListener {
                  "handler": [Function],
                  "type": "keydown",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerdown",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerover",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerout",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "focusin",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "focusout",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "keydown",
                },
                MockEventListener {
                  "handler": null,
                  "type": "e",
                },
              ],
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                MockDocumentTypeNode {
                  "__attributeMap": MockAttributeMap {
                    "__items": [
                      MockAttr {
                        "_name": "html",
                        "_namespaceURI": null,
                        "_value": "",
                      },
                    ],
                    "caseInsensitive": true,
                  },
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [],
                  "_nodeValue": null,
                  "nodeName": "!DOCTYPE",
                  "nodeType": 10,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                },
                [Circular],
              ],
              "_nodeValue": null,
              "cookie": "",
              "defaultView": [Object],
              "nodeName": "#document",
              "nodeType": 9,
              "ownerDocument": null,
              "parentNode": null,
              "referrer": "",
            },
            "parentNode": [Circular],
          },
          [Circular],
        ],
        "_nodeValue": null,
        "nodeName": "HTML",
        "nodeType": 1,
        "ownerDocument": _MockDocument {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__listeners": [
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerdown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerover",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusin",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": null,
              "type": "e",
            },
          ],
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockDocumentTypeNode {
              "__attributeMap": MockAttributeMap {
                "__items": [
                  MockAttr {
                    "_name": "html",
                    "_namespaceURI": null,
                    "_value": "",
                  },
                ],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [],
              "_nodeValue": null,
              "nodeName": "!DOCTYPE",
              "nodeType": 10,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            [Circular],
          ],
          "_nodeValue": null,
          "cookie": "",
          "defaultView": [Object],
          "nodeName": "#document",
          "nodeType": 9,
          "ownerDocument": null,
          "parentNode": null,
          "referrer": "",
        },
        "parentNode": _MockDocument {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__listeners": [
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerdown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerover",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusin",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": null,
              "type": "e",
            },
          ],
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockDocumentTypeNode {
              "__attributeMap": MockAttributeMap {
                "__items": [
                  MockAttr {
                    "_name": "html",
                    "_namespaceURI": null,
                    "_value": "",
                  },
                ],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [],
              "_nodeValue": null,
              "nodeName": "!DOCTYPE",
              "nodeType": 10,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            [Circular],
          ],
          "_nodeValue": null,
          "cookie": "",
          "defaultView": [Object],
          "nodeName": "#document",
          "nodeType": 9,
          "ownerDocument": null,
          "parentNode": null,
          "referrer": "",
        },
      },
    },
  },
  "s-hn": "DIV",
}
`;

exports[`io-modal — render snapshots > renders slotted footer actions 1`] = `
<io-modal size="md" background="canvas" prevent-top-layer class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="modal__backdrop">
      <dialog class="modal--md modal--bg-canvas" aria-labelledby="io-modal-heading-4fzzzxjylrx" aria-describedby="io-modal-heading-4fzzzxjylrx-description" aria-modal="true">
        <div class="modal__header">
          <slot name="header">
            <h2 id="io-modal-heading-4fzzzxjylrx" class="modal__heading">
              Open modal
            </h2>
          </slot>
          <button type="button" class="modal__close" aria-label="Close dialog">
            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
              <path d="M18 6 6 18"></path>
              <path d="m6 6 12 12"></path>
            </svg>
          </button>
        </div>
        <div class="modal__body" id="io-modal-heading-4fzzzxjylrx-description">
          <slot></slot>
        </div>
        <div class="modal__footer">
          <slot name="footer"></slot>
        </div>
      </dialog>
    </div>
  </mock:shadow-root>
  <p __self="[object global]" __source="[object Object]">
    Modal body content.
  </p>
  <button slot="footer" type="button" __self="[object global]" __source="[object Object]">
    Cancel
  </button>
  <button slot="footer" type="button" __self="[object global]" __source="[object Object]">
    Confirm
  </button>
</io-modal>
`;

exports[`io-modal — render snapshots > renders without footer when no footer slot content 1`] = `
<io-modal size="md" background="canvas" prevent-top-layer class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="modal__backdrop">
      <dialog class="modal--md modal--bg-canvas" aria-labelledby="io-modal-heading-4fzzzxjylrx" aria-modal="true">
        <div class="modal__header">
          <slot name="header">
            <h2 id="io-modal-heading-4fzzzxjylrx" class="modal__heading">
              No footer
            </h2>
          </slot>
          <button type="button" class="modal__close" aria-label="Close dialog">
            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
              <path d="M18 6 6 18"></path>
              <path d="m6 6 12 12"></path>
            </svg>
          </button>
        </div>
        <div class="modal__body">
          <slot></slot>
        </div>
        <div class="modal__footer modal__footer--hidden">
          <slot name="footer"></slot>
        </div>
      </dialog>
    </div>
  </mock:shadow-root>
  Body only
</io-modal>
`;
